[gd_scene load_steps=18 format=3 uid="uid://fua0ed5byfis"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_mxme1"]
[ext_resource type="FontFile" uid="uid://cydnd2rfvdub0" path="res://Assets/Minecraft.ttf" id="1_n0hfd"]
[ext_resource type="Texture2D" uid="uid://biy67wnhyfcsv" path="res://Assets/monochrome_tilemap_packed.png" id="2_xg3tv"]
[ext_resource type="AudioStream" uid="uid://b5mrykhce5qkq" path="res://Assets/SFX/Menu/sfx_menu_move.wav" id="4_0axqd"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a4oer"]
texture = ExtResource("2_xg3tv")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0

[sub_resource type="TileSet" id="TileSet_gp4qr"]
sources/0 = SubResource("TileSetAtlasSource_a4oer")

[sub_resource type="Theme" id="Theme_y1ujg"]
default_font = ExtResource("1_n0hfd")
default_font_size = 50

[sub_resource type="Theme" id="Theme_0mftg"]
default_font = ExtResource("1_n0hfd")
default_font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_88ga2"]
font = ExtResource("1_n0hfd")
font_size = 50
shadow_size = 20
shadow_color = Color(0.678431, 0.466667, 0.25098, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_sygxn"]
atlas = ExtResource("2_xg3tv")
region = Rect2(16, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5nok"]
atlas = ExtResource("2_xg3tv")
region = Rect2(32, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr2kf"]
atlas = ExtResource("2_xg3tv")
region = Rect2(48, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3yp3"]
atlas = ExtResource("2_xg3tv")
region = Rect2(64, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r74r"]
atlas = ExtResource("2_xg3tv")
region = Rect2(144, 288, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wmqu"]
atlas = ExtResource("2_xg3tv")
region = Rect2(160, 288, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_p6pkr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sygxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5nok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr2kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3yp3")
}],
"loop": true,
"name": &"Menu player",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r74r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wmqu")
}],
"loop": true,
"name": &"credit",
"speed": 15.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_v4bs4"]
font = ExtResource("1_n0hfd")
font_size = 12
shadow_size = 10
shadow_color = Color(0.278431, 0.176471, 0.0745098, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mxme1")

[node name="BackgroundTiles" type="TileMap" parent="."]
position = Vector2(285, 150)
scale = Vector2(5, 5)
tile_set = SubResource("TileSet_gp4qr")
cell_quadrant_size = 20
format = 2
layer_0/tile_data = PackedInt32Array(262150, 917504, 1, 196614, 917504, 0, 327679, 983040, 1, 262143, 983040, 0, 262141, 983040, 0, 196615, 983040, 0, 262151, 983040, 1, 327677, 983040, 1, 262152, 1245184, 0, 327678, 1114112, 1, 327676, 1245184, 0, -131064, 1245184, 0, -65528, 1245184, 0, 8, 1245184, 0, 65544, 1245184, 0, 131080, 1245184, 0, 196616, 1245184, 0, 327688, 1245184, 0, -65540, 1245184, 0, -4, 1245184, 0, 65532, 1245184, 0, 131068, 1245184, 0, 196604, 1245184, 0, 262140, 1245184, 0, 393212, 1245184, 0, 262144, 1179648, 1, 262148, 1179648, 1, 262149, 1048576, 0, 262145, 1048576, 0, 262146, 1048576, 1, 262147, 1114112, 1)
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -82.0
offset_right = 105.5
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_y1ujg")
theme_override_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="ButtonSoundD" type="AudioStreamPlayer2D" parent="MarginContainer/VBoxContainer/Play"]
stream = ExtResource("4_0axqd")

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "OPTION"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0mftg")
text = "QUIT"

[node name="MainLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = -179.0
offset_right = 149.5
offset_bottom = -125.0
grow_horizontal = 2
grow_vertical = 2
text = "1 BIT FELLA"
label_settings = SubResource("LabelSettings_88ga2")
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MainLabel"]
position = Vector2(-65.5, 13)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_p6pkr")
animation = &"Menu player"
autoplay = "Menu player"

[node name="CreditLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = 157.0
offset_right = 147.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2
text = "MADE BY KAPIOGA"
label_settings = SubResource("LabelSettings_v4bs4")
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CreditLabel"]
position = Vector2(81, 4.99998)
sprite_frames = SubResource("SpriteFrames_p6pkr")
animation = &"credit"
autoplay = "Menu player"
frame_progress = 0.897747

[node name="CreditLabelText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.5
offset_top = 175.0
offset_right = 171.5
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME ASSETS: KENNEY 1 BIT PACK"
label_settings = SubResource("LabelSettings_v4bs4")
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CreditLabelText"]
position = Vector2(55.5, 4.99998)
sprite_frames = SubResource("SpriteFrames_p6pkr")
animation = &"credit"
autoplay = "Menu player"

[node name="BackgroundTiles2" type="TileMap" parent="."]
position = Vector2(285, 150)
scale = Vector2(5, 5)
tile_set = SubResource("TileSet_gp4qr")
cell_quadrant_size = 20
format = 2
layer_0/tile_data = PackedInt32Array(262150, 917504, 1, 196614, 917504, 0, 327679, 983040, 1, 262143, 983040, 0, 262141, 983040, 0, 196615, 983040, 0, 262151, 983040, 1, 327677, 983040, 1, 327678, 1114112, 1, 262144, 1179648, 1, 262148, 1179648, 1, 262149, 1048576, 0, 262145, 1048576, 0, 262146, 1048576, 1, 262147, 1114112, 1)

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
